bitflip/src/snapshots/bitflip__db__tests__players_table_snapshot.snap
---
source: bitflip/src/db.rs
expression: diff
snapshot_kind: text
---
[
    Issue {
        ident: TableIdent {
            schema: None,
            name: "players",
        },
        level: Medium,
        kind: Changed(
            Diff {
                column: "pubkey",
                db_type: "TEXT",
                db_nullable: true,
                welds_type: "String",
                welds_nullable: false,
                type_changed: false,
            },
        ),
    },
    Issue {
        ident: TableIdent {
            schema: None,
            name: "players",
        },
        level: High,
        kind: Changed(
            Diff {
                column: "updated_at",
                db_type: "TEXT",
                db_nullable: false,
                welds_type: "DateTime<Utc>",
                welds_nullable: false,
                type_changed: true,
            },
        ),
    },
    Issue {
        ident: TableIdent {
            schema: None,
            name: "players",
        },
        level: High,
        kind: Changed(
            Diff {
                column: "created_at",
                db_type: "TEXT",
                db_nullable: false,
                welds_type: "DateTime<Utc>",
                welds_nullable: false,
                type_changed: true,
            },
        ),
    },
    Issue {
        ident: TableIdent {
            schema: None,
            name: "players",
        },
        level: Medium,
        kind: InDbNotModel(
            Missing {
                column: "status",
                ty: "INTEGER",
                nullable: false,
            },
        ),
    },
]
